// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Name.lengt is false 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Home
    name=""
    props={
      Object {
        "city": "lille",
        "currentIcon": "somelink",
        "currentTemp": "15",
        "currentWeath": "cloud",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          <h3
            className="center"
          >
            Welcome, 
          </h3>
          <h4
            className="center"
          >
            don't forget to sign in to see your city in first
          </h4>
        </div>,
        <div
          className="row"
        >
          <div
            className="col s12 m5"
          >
            <div
              className="card-panel blue"
            >
              <span
                className="white-text"
                id="showCity"
              >
                 
                <img
                  alt="weather-icon"
                />
                 
              </span>
              <p
                className="white-text"
                id="showCurrentTemp"
              >
                 
                C 
              </p>
              <p
                className="white-text"
                id="showCurrentWeather"
              >
                 
                 
              </p>
            </div>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3
              className="center"
            >
              Welcome, 
            </h3>,
            <h4
              className="center"
            >
              don't forget to sign in to see your city in first
            </h4>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Welcome, ",
              "className": "center",
            },
            "ref": null,
            "rendered": "Welcome, ",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "don't forget to sign in to see your city in first",
              "className": "center",
            },
            "ref": null,
            "rendered": "don't forget to sign in to see your city in first",
            "type": "h4",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="col s12 m5"
          >
            <div
              className="card-panel blue"
            >
              <span
                className="white-text"
                id="showCity"
              >
                 
                <img
                  alt="weather-icon"
                />
                 
              </span>
              <p
                className="white-text"
                id="showCurrentTemp"
              >
                 
                C 
              </p>
              <p
                className="white-text"
                id="showCurrentWeather"
              >
                 
                 
              </p>
            </div>
          </div>,
          "className": "row",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="card-panel blue"
            >
              <span
                className="white-text"
                id="showCity"
              >
                 
                <img
                  alt="weather-icon"
                />
                 
              </span>
              <p
                className="white-text"
                id="showCurrentTemp"
              >
                 
                C 
              </p>
              <p
                className="white-text"
                id="showCurrentWeather"
              >
                 
                 
              </p>
            </div>,
            "className": "col s12 m5",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="white-text"
                  id="showCity"
                >
                   
                  <img
                    alt="weather-icon"
                  />
                   
                </span>,
                <p
                  className="white-text"
                  id="showCurrentTemp"
                >
                   
                  C 
                </p>,
                <p
                  className="white-text"
                  id="showCurrentWeather"
                >
                   
                   
                </p>,
              ],
              "className": "card-panel blue",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    undefined,
                    " ",
                    <img
                      alt="weather-icon"
                    />,
                    " ",
                  ],
                  "className": "white-text",
                  "id": "showCity",
                },
                "ref": null,
                "rendered": Array [
                  undefined,
                  " ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "weather-icon",
                      "src": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                  " ",
                ],
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    " ",
                    undefined,
                    "C ",
                  ],
                  "className": "white-text",
                  "id": "showCurrentTemp",
                },
                "ref": null,
                "rendered": Array [
                  " ",
                  undefined,
                  "C ",
                ],
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    " ",
                    undefined,
                    " ",
                  ],
                  "className": "white-text",
                  "id": "showCurrentWeather",
                },
                "ref": null,
                "rendered": Array [
                  " ",
                  undefined,
                  " ",
                ],
                "type": "p",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            <h3
              className="center"
            >
              Welcome, 
            </h3>
            <h4
              className="center"
            >
              don't forget to sign in to see your city in first
            </h4>
          </div>,
          <div
            className="row"
          >
            <div
              className="col s12 m5"
            >
              <div
                className="card-panel blue"
              >
                <span
                  className="white-text"
                  id="showCity"
                >
                   
                  <img
                    alt="weather-icon"
                  />
                   
                </span>
                <p
                  className="white-text"
                  id="showCurrentTemp"
                >
                   
                  C 
                </p>
                <p
                  className="white-text"
                  id="showCurrentWeather"
                >
                   
                   
                </p>
              </div>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3
                className="center"
              >
                Welcome, 
              </h3>,
              <h4
                className="center"
              >
                don't forget to sign in to see your city in first
              </h4>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Welcome, ",
                "className": "center",
              },
              "ref": null,
              "rendered": "Welcome, ",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "don't forget to sign in to see your city in first",
                "className": "center",
              },
              "ref": null,
              "rendered": "don't forget to sign in to see your city in first",
              "type": "h4",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="col s12 m5"
            >
              <div
                className="card-panel blue"
              >
                <span
                  className="white-text"
                  id="showCity"
                >
                   
                  <img
                    alt="weather-icon"
                  />
                   
                </span>
                <p
                  className="white-text"
                  id="showCurrentTemp"
                >
                   
                  C 
                </p>
                <p
                  className="white-text"
                  id="showCurrentWeather"
                >
                   
                   
                </p>
              </div>
            </div>,
            "className": "row",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="card-panel blue"
              >
                <span
                  className="white-text"
                  id="showCity"
                >
                   
                  <img
                    alt="weather-icon"
                  />
                   
                </span>
                <p
                  className="white-text"
                  id="showCurrentTemp"
                >
                   
                  C 
                </p>
                <p
                  className="white-text"
                  id="showCurrentWeather"
                >
                   
                   
                </p>
              </div>,
              "className": "col s12 m5",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="white-text"
                    id="showCity"
                  >
                     
                    <img
                      alt="weather-icon"
                    />
                     
                  </span>,
                  <p
                    className="white-text"
                    id="showCurrentTemp"
                  >
                     
                    C 
                  </p>,
                  <p
                    className="white-text"
                    id="showCurrentWeather"
                  >
                     
                     
                  </p>,
                ],
                "className": "card-panel blue",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      undefined,
                      " ",
                      <img
                        alt="weather-icon"
                      />,
                      " ",
                    ],
                    "className": "white-text",
                    "id": "showCity",
                  },
                  "ref": null,
                  "rendered": Array [
                    undefined,
                    " ",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "alt": "weather-icon",
                        "src": undefined,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "img",
                    },
                    " ",
                  ],
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      " ",
                      undefined,
                      "C ",
                    ],
                    "className": "white-text",
                    "id": "showCurrentTemp",
                  },
                  "ref": null,
                  "rendered": Array [
                    " ",
                    undefined,
                    "C ",
                  ],
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      " ",
                      undefined,
                      " ",
                    ],
                    "className": "white-text",
                    "id": "showCurrentWeather",
                  },
                  "ref": null,
                  "rendered": Array [
                    " ",
                    undefined,
                    " ",
                  ],
                  "type": "p",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Home Name.lengt is true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Home
    name="test"
    props={
      Object {
        "city": "lille",
        "currentIcon": "somelink",
        "currentTemp": "15",
        "currentWeath": "cloud",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="auth"
        >
          <h1>
            Welcome 
            test
             
          </h1>
        </div>,
        <div
          className="row"
        >
          <div
            className="col s12 m5"
          >
            <div
              className="card-panel blue"
            >
              <span
                className="white-text"
                id="showCity"
              >
                 
                <img
                  alt="weather-icon"
                />
                 
              </span>
              <p
                className="white-text"
                id="showCurrentTemp"
              >
                 
                C 
              </p>
              <p
                className="white-text"
                id="showCurrentWeather"
              >
                 
                 
              </p>
            </div>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h1>
            Welcome 
            test
             
          </h1>,
          "className": "auth",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Welcome ",
              "test",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Welcome ",
            "test",
            " ",
          ],
          "type": "h1",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="col s12 m5"
          >
            <div
              className="card-panel blue"
            >
              <span
                className="white-text"
                id="showCity"
              >
                 
                <img
                  alt="weather-icon"
                />
                 
              </span>
              <p
                className="white-text"
                id="showCurrentTemp"
              >
                 
                C 
              </p>
              <p
                className="white-text"
                id="showCurrentWeather"
              >
                 
                 
              </p>
            </div>
          </div>,
          "className": "row",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="card-panel blue"
            >
              <span
                className="white-text"
                id="showCity"
              >
                 
                <img
                  alt="weather-icon"
                />
                 
              </span>
              <p
                className="white-text"
                id="showCurrentTemp"
              >
                 
                C 
              </p>
              <p
                className="white-text"
                id="showCurrentWeather"
              >
                 
                 
              </p>
            </div>,
            "className": "col s12 m5",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="white-text"
                  id="showCity"
                >
                   
                  <img
                    alt="weather-icon"
                  />
                   
                </span>,
                <p
                  className="white-text"
                  id="showCurrentTemp"
                >
                   
                  C 
                </p>,
                <p
                  className="white-text"
                  id="showCurrentWeather"
                >
                   
                   
                </p>,
              ],
              "className": "card-panel blue",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    undefined,
                    " ",
                    <img
                      alt="weather-icon"
                    />,
                    " ",
                  ],
                  "className": "white-text",
                  "id": "showCity",
                },
                "ref": null,
                "rendered": Array [
                  undefined,
                  " ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "weather-icon",
                      "src": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                  " ",
                ],
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    " ",
                    undefined,
                    "C ",
                  ],
                  "className": "white-text",
                  "id": "showCurrentTemp",
                },
                "ref": null,
                "rendered": Array [
                  " ",
                  undefined,
                  "C ",
                ],
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    " ",
                    undefined,
                    " ",
                  ],
                  "className": "white-text",
                  "id": "showCurrentWeather",
                },
                "ref": null,
                "rendered": Array [
                  " ",
                  undefined,
                  " ",
                ],
                "type": "p",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="auth"
          >
            <h1>
              Welcome 
              test
               
            </h1>
          </div>,
          <div
            className="row"
          >
            <div
              className="col s12 m5"
            >
              <div
                className="card-panel blue"
              >
                <span
                  className="white-text"
                  id="showCity"
                >
                   
                  <img
                    alt="weather-icon"
                  />
                   
                </span>
                <p
                  className="white-text"
                  id="showCurrentTemp"
                >
                   
                  C 
                </p>
                <p
                  className="white-text"
                  id="showCurrentWeather"
                >
                   
                   
                </p>
              </div>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h1>
              Welcome 
              test
               
            </h1>,
            "className": "auth",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Welcome ",
                "test",
                " ",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Welcome ",
              "test",
              " ",
            ],
            "type": "h1",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="col s12 m5"
            >
              <div
                className="card-panel blue"
              >
                <span
                  className="white-text"
                  id="showCity"
                >
                   
                  <img
                    alt="weather-icon"
                  />
                   
                </span>
                <p
                  className="white-text"
                  id="showCurrentTemp"
                >
                   
                  C 
                </p>
                <p
                  className="white-text"
                  id="showCurrentWeather"
                >
                   
                   
                </p>
              </div>
            </div>,
            "className": "row",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="card-panel blue"
              >
                <span
                  className="white-text"
                  id="showCity"
                >
                   
                  <img
                    alt="weather-icon"
                  />
                   
                </span>
                <p
                  className="white-text"
                  id="showCurrentTemp"
                >
                   
                  C 
                </p>
                <p
                  className="white-text"
                  id="showCurrentWeather"
                >
                   
                   
                </p>
              </div>,
              "className": "col s12 m5",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="white-text"
                    id="showCity"
                  >
                     
                    <img
                      alt="weather-icon"
                    />
                     
                  </span>,
                  <p
                    className="white-text"
                    id="showCurrentTemp"
                  >
                     
                    C 
                  </p>,
                  <p
                    className="white-text"
                    id="showCurrentWeather"
                  >
                     
                     
                  </p>,
                ],
                "className": "card-panel blue",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      undefined,
                      " ",
                      <img
                        alt="weather-icon"
                      />,
                      " ",
                    ],
                    "className": "white-text",
                    "id": "showCity",
                  },
                  "ref": null,
                  "rendered": Array [
                    undefined,
                    " ",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "alt": "weather-icon",
                        "src": undefined,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "img",
                    },
                    " ",
                  ],
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      " ",
                      undefined,
                      "C ",
                    ],
                    "className": "white-text",
                    "id": "showCurrentTemp",
                  },
                  "ref": null,
                  "rendered": Array [
                    " ",
                    undefined,
                    "C ",
                  ],
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      " ",
                      undefined,
                      " ",
                    ],
                    "className": "white-text",
                    "id": "showCurrentWeather",
                  },
                  "ref": null,
                  "rendered": Array [
                    " ",
                    undefined,
                    " ",
                  ],
                  "type": "p",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Home Pending false 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Home
    isPending={false}
    name=""
    props={
      Object {
        "city": "lille",
        "currentIcon": "somelink",
        "currentTemp": "15",
        "currentWeath": "cloud",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          <h3
            className="center"
          >
            Welcome, 
          </h3>
          <h4
            className="center"
          >
            don't forget to sign in to see your city in first
          </h4>
        </div>,
        <div
          className="row"
        >
          <div
            className="col s12 m5"
          >
            <div
              className="card-panel blue"
            >
              <span
                className="white-text"
                id="showCity"
              >
                 
                <img
                  alt="weather-icon"
                />
                 
              </span>
              <p
                className="white-text"
                id="showCurrentTemp"
              >
                 
                C 
              </p>
              <p
                className="white-text"
                id="showCurrentWeather"
              >
                 
                 
              </p>
            </div>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3
              className="center"
            >
              Welcome, 
            </h3>,
            <h4
              className="center"
            >
              don't forget to sign in to see your city in first
            </h4>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Welcome, ",
              "className": "center",
            },
            "ref": null,
            "rendered": "Welcome, ",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "don't forget to sign in to see your city in first",
              "className": "center",
            },
            "ref": null,
            "rendered": "don't forget to sign in to see your city in first",
            "type": "h4",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="col s12 m5"
          >
            <div
              className="card-panel blue"
            >
              <span
                className="white-text"
                id="showCity"
              >
                 
                <img
                  alt="weather-icon"
                />
                 
              </span>
              <p
                className="white-text"
                id="showCurrentTemp"
              >
                 
                C 
              </p>
              <p
                className="white-text"
                id="showCurrentWeather"
              >
                 
                 
              </p>
            </div>
          </div>,
          "className": "row",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="card-panel blue"
            >
              <span
                className="white-text"
                id="showCity"
              >
                 
                <img
                  alt="weather-icon"
                />
                 
              </span>
              <p
                className="white-text"
                id="showCurrentTemp"
              >
                 
                C 
              </p>
              <p
                className="white-text"
                id="showCurrentWeather"
              >
                 
                 
              </p>
            </div>,
            "className": "col s12 m5",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="white-text"
                  id="showCity"
                >
                   
                  <img
                    alt="weather-icon"
                  />
                   
                </span>,
                <p
                  className="white-text"
                  id="showCurrentTemp"
                >
                   
                  C 
                </p>,
                <p
                  className="white-text"
                  id="showCurrentWeather"
                >
                   
                   
                </p>,
              ],
              "className": "card-panel blue",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    undefined,
                    " ",
                    <img
                      alt="weather-icon"
                    />,
                    " ",
                  ],
                  "className": "white-text",
                  "id": "showCity",
                },
                "ref": null,
                "rendered": Array [
                  undefined,
                  " ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "weather-icon",
                      "src": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                  " ",
                ],
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    " ",
                    undefined,
                    "C ",
                  ],
                  "className": "white-text",
                  "id": "showCurrentTemp",
                },
                "ref": null,
                "rendered": Array [
                  " ",
                  undefined,
                  "C ",
                ],
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    " ",
                    undefined,
                    " ",
                  ],
                  "className": "white-text",
                  "id": "showCurrentWeather",
                },
                "ref": null,
                "rendered": Array [
                  " ",
                  undefined,
                  " ",
                ],
                "type": "p",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            <h3
              className="center"
            >
              Welcome, 
            </h3>
            <h4
              className="center"
            >
              don't forget to sign in to see your city in first
            </h4>
          </div>,
          <div
            className="row"
          >
            <div
              className="col s12 m5"
            >
              <div
                className="card-panel blue"
              >
                <span
                  className="white-text"
                  id="showCity"
                >
                   
                  <img
                    alt="weather-icon"
                  />
                   
                </span>
                <p
                  className="white-text"
                  id="showCurrentTemp"
                >
                   
                  C 
                </p>
                <p
                  className="white-text"
                  id="showCurrentWeather"
                >
                   
                   
                </p>
              </div>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3
                className="center"
              >
                Welcome, 
              </h3>,
              <h4
                className="center"
              >
                don't forget to sign in to see your city in first
              </h4>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Welcome, ",
                "className": "center",
              },
              "ref": null,
              "rendered": "Welcome, ",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "don't forget to sign in to see your city in first",
                "className": "center",
              },
              "ref": null,
              "rendered": "don't forget to sign in to see your city in first",
              "type": "h4",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="col s12 m5"
            >
              <div
                className="card-panel blue"
              >
                <span
                  className="white-text"
                  id="showCity"
                >
                   
                  <img
                    alt="weather-icon"
                  />
                   
                </span>
                <p
                  className="white-text"
                  id="showCurrentTemp"
                >
                   
                  C 
                </p>
                <p
                  className="white-text"
                  id="showCurrentWeather"
                >
                   
                   
                </p>
              </div>
            </div>,
            "className": "row",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="card-panel blue"
              >
                <span
                  className="white-text"
                  id="showCity"
                >
                   
                  <img
                    alt="weather-icon"
                  />
                   
                </span>
                <p
                  className="white-text"
                  id="showCurrentTemp"
                >
                   
                  C 
                </p>
                <p
                  className="white-text"
                  id="showCurrentWeather"
                >
                   
                   
                </p>
              </div>,
              "className": "col s12 m5",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="white-text"
                    id="showCity"
                  >
                     
                    <img
                      alt="weather-icon"
                    />
                     
                  </span>,
                  <p
                    className="white-text"
                    id="showCurrentTemp"
                  >
                     
                    C 
                  </p>,
                  <p
                    className="white-text"
                    id="showCurrentWeather"
                  >
                     
                     
                  </p>,
                ],
                "className": "card-panel blue",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      undefined,
                      " ",
                      <img
                        alt="weather-icon"
                      />,
                      " ",
                    ],
                    "className": "white-text",
                    "id": "showCity",
                  },
                  "ref": null,
                  "rendered": Array [
                    undefined,
                    " ",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "alt": "weather-icon",
                        "src": undefined,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "img",
                    },
                    " ",
                  ],
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      " ",
                      undefined,
                      "C ",
                    ],
                    "className": "white-text",
                    "id": "showCurrentTemp",
                  },
                  "ref": null,
                  "rendered": Array [
                    " ",
                    undefined,
                    "C ",
                  ],
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      " ",
                      undefined,
                      " ",
                    ],
                    "className": "white-text",
                    "id": "showCurrentWeather",
                  },
                  "ref": null,
                  "rendered": Array [
                    " ",
                    undefined,
                    " ",
                  ],
                  "type": "p",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Home Pending true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Home
    isPending={true}
    name=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          <h3
            className="center"
          >
            Welcome, 
          </h3>
          <h4
            className="center"
          >
            don't forget to sign in to see your city in first
          </h4>
        </div>,
        <div
          className=" preloader-wrapper small active"
        >
          <div
            className=" spinner-layer spinner-green-only"
          >
            <div
              className="circle-clipper left"
            >
              <div
                className="circle"
              />
            </div>
            <div
              className="gap-patch"
            >
              <div
                className="circle"
              />
            </div>
            <div
              className="circle-clipper right"
            >
              <div
                className="circle"
              />
            </div>
          </div>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3
              className="center"
            >
              Welcome, 
            </h3>,
            <h4
              className="center"
            >
              don't forget to sign in to see your city in first
            </h4>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Welcome, ",
              "className": "center",
            },
            "ref": null,
            "rendered": "Welcome, ",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "don't forget to sign in to see your city in first",
              "className": "center",
            },
            "ref": null,
            "rendered": "don't forget to sign in to see your city in first",
            "type": "h4",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className=" spinner-layer spinner-green-only"
          >
            <div
              className="circle-clipper left"
            >
              <div
                className="circle"
              />
            </div>
            <div
              className="gap-patch"
            >
              <div
                className="circle"
              />
            </div>
            <div
              className="circle-clipper right"
            >
              <div
                className="circle"
              />
            </div>
          </div>,
          "className": " preloader-wrapper small active",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="circle-clipper left"
              >
                <div
                  className="circle"
                />
              </div>,
              <div
                className="gap-patch"
              >
                <div
                  className="circle"
                />
              </div>,
              <div
                className="circle-clipper right"
              >
                <div
                  className="circle"
                />
              </div>,
            ],
            "className": " spinner-layer spinner-green-only",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="circle"
                />,
                "className": "circle-clipper left",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "circle",
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="circle"
                />,
                "className": "gap-patch",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "circle",
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="circle"
                />,
                "className": "circle-clipper right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "circle",
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            <h3
              className="center"
            >
              Welcome, 
            </h3>
            <h4
              className="center"
            >
              don't forget to sign in to see your city in first
            </h4>
          </div>,
          <div
            className=" preloader-wrapper small active"
          >
            <div
              className=" spinner-layer spinner-green-only"
            >
              <div
                className="circle-clipper left"
              >
                <div
                  className="circle"
                />
              </div>
              <div
                className="gap-patch"
              >
                <div
                  className="circle"
                />
              </div>
              <div
                className="circle-clipper right"
              >
                <div
                  className="circle"
                />
              </div>
            </div>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3
                className="center"
              >
                Welcome, 
              </h3>,
              <h4
                className="center"
              >
                don't forget to sign in to see your city in first
              </h4>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Welcome, ",
                "className": "center",
              },
              "ref": null,
              "rendered": "Welcome, ",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "don't forget to sign in to see your city in first",
                "className": "center",
              },
              "ref": null,
              "rendered": "don't forget to sign in to see your city in first",
              "type": "h4",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className=" spinner-layer spinner-green-only"
            >
              <div
                className="circle-clipper left"
              >
                <div
                  className="circle"
                />
              </div>
              <div
                className="gap-patch"
              >
                <div
                  className="circle"
                />
              </div>
              <div
                className="circle-clipper right"
              >
                <div
                  className="circle"
                />
              </div>
            </div>,
            "className": " preloader-wrapper small active",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="circle-clipper left"
                >
                  <div
                    className="circle"
                  />
                </div>,
                <div
                  className="gap-patch"
                >
                  <div
                    className="circle"
                  />
                </div>,
                <div
                  className="circle-clipper right"
                >
                  <div
                    className="circle"
                  />
                </div>,
              ],
              "className": " spinner-layer spinner-green-only",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="circle"
                  />,
                  "className": "circle-clipper left",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "circle",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "div",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="circle"
                  />,
                  "className": "gap-patch",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "circle",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "div",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="circle"
                  />,
                  "className": "circle-clipper right",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "circle",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "div",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
